# termstyle

./: Cargo.toml  README.md  example.yaml
src/: lib.rs
tests/: sanity.rs
