[package]
authors = ["Garrett Berg <googberg@gmail.com>"]
name = "termstyle"
version = "0.1.0"

[dependencies]
ansi_term = "0.10"
serde = "1.*"
serde_derive = "1.*"
std_prelude = "0.2"

[dependencies.tabwriter]
default-features = false
features = ["ansi_formatting"]
version = "1.*"

[dev-dependencies]
pretty_assertions = "0.4"
serde_json = "1.*"
serde_yaml = "0.7"
